[package]
name = "tungsten-glium2d"
version = "0.1.0"
authors = ["Layl <LaylConway@users.noreply.github.com>"]

[dependencies]
cgmath = "0.7.0"
#glium = "0.13.5" waiting on arrays in uniforms to be supported
image = "0.8.0"
#tungsten = "0.1.0" waiting on this to be published

[dependencies.glium]
git = "https://github.com/tomaka/glium.git"

[dependencies.tungsten]
git = "https://github.com/carbidegames/tungsten.git"
